--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           <span><i class="ri-calendar-line"></i></span>
           <div class="input__content">
             <div class="input__group">
-              <input type="text" />
+              <input type="date" />
               <label for="">Depart</label>
             </div>
             <p>Entrer une date</p>
@@ -92,7 +92,7 @@
           <span><i class="ri-calendar-line"></i></span>
           <div class="input__content">
             <div class="input__group">
-              <input type="text" />
+              <input type="date" />
               <label for="">Retour</label>
             </div>
             <p>Entrer une date</p>
