--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
           <li class="link"><a href="#destination">Destinations</a></li>
           <li class="link"><a href="html/partenariat.html">Partenariats</a></li>
         </ul>
+        <ul class="nav__links_small_screen">
+          <li class="link"><a href="html/partenariat.html">Partenariats</a></li>
+        </ul>
         <a href="#contact" class="btn">Contact</a>
       </nav>
     </div>
