--- a/html/destinations.html
+++ b/html/destinations.html
@@ -27,6 +27,9 @@
             <li class="link"><a href="#">Destinations</a></li>
             <li class="link"><a href="../html/partenariat.html">Partenariats</a></li>
           </ul>
+          <ul class="nav__links_small_screen">
+             <li class="link"><a href="html/partenariat.html">Partenariats</a></li>
+          </ul>
           <a href="#contact_des" class="btn">Contact</a>
         </nav>
     </div>
