--- a/html/partenariat.html
+++ b/html/partenariat.html
@@ -70,7 +70,7 @@
                     <span><i class="ri-calendar-line"></i></span>
                     <div class="input__content">
                       <div class="input__group">
-                        <input type="text" />
+                        <input type="date" />
                         <label for="">Arrivée</label>
                       </div>
                       <p>Entrer une date</p>
@@ -80,7 +80,7 @@
                     <span><i class="ri-calendar-line"></i></span>
                     <div class="input__content">
                       <div class="input__group">
-                        <input type="text" />
+                        <input type="date" />
                         <label for="">Retour</label>
                       </div>
                       <p>Entrer une date</p>
