--- a/html/page_class_eco.html
+++ b/html/page_class_eco.html
@@ -28,6 +28,9 @@
             <li class="link"><a href="../index.html#destination">Destinations</a></li>
             <li class="link"><a href="../html/partenariat.html">Partenariats</a></li>
           </ul>
+          <ul class="nav__links_small_screen">
+            <li class="link"><a href="../html/partenariat.html">Partenariats</a></li>
+          </ul>        
           <a href="#contact_des" class="btn">Contact</a>
         </nav>
     </div>
